@@ -1,3 +1,8 @@
+2010-01-22  Ingo Feinerer  <feinerer@logic.at>
+
+	* R/transform.R (stemDocument.character): In case input is a
+	simple character just delegate to the default Snowball stemmer.
+
 2010-01-15  Ingo Feinerer  <feinerer@logic.at>
 
 	* R/reader.R (readReut21578XML, readRCV1): Extract more meta
